--- a/src/views/login-page.hbs
+++ b/src/views/login-page.hbs
@@ -20,7 +20,7 @@
       border-radius: 5px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
-    input[type="text"], input[type="password"] {
+    input[type="email"], input[type="password"] {
       width: 100%;
       padding: 10px;
       margin: 10px 0;
@@ -57,8 +57,8 @@
 <body>
 <div class="login-container">
   <h2>Login</h2>
-  <form action="/login" method="post">
-    <input type="text" name="username" placeholder="Username" required>
+  <form action="./signin" method="post">
+    <input type="email" name="email" placeholder=Email required>
     <input type="password" name="plaintext_password" placeholder="Password" required>
     <button type="submit">Login</button>
     <a href="." class="back-button">Back</a>
