lmao relative path

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -40,8 +40,8 @@
 <body>
 <div class="container">
   <h2>Welcome to SparkVoice</h2>
-  <a href="./create-user-page" class="button">Create New Account</a>
-  <a href="./login-page" class="button">Login</a>
+  <a href="./auth/create-user-page" class="button">Create New Account</a>
+  <a href="./auth/login-page" class="button">Login</a>
 </div>
 </body>
 </html>
