--- a/src/views/login-page.hbs
+++ b/src/views/login-page.hbs
@@ -61,7 +61,7 @@
     <input type="email" name="email" placeholder=Email required>
     <input type="password" name="plaintext_password" placeholder="Password" required>
     <button type="submit">Login</button>
-    <a href="." class="back-button">Back</a>
+    <a href="../auth" class="back-button">Back</a>
   </form>
 </div>
 </body>
