--- a/src/views/create-user-page.hbs
+++ b/src/views/create-user-page.hbs
@@ -62,7 +62,7 @@
     <input type="email" name="email" placeholder="Email" required>
     <input type="password" name="password" placeholder="Password" required>
     <button type="submit">Create User</button>
-    <a href="." class="back-button">Back</a>
+    <a href="../auth" class="back-button">Back</a>
   </form>
 </div>
 </body>
